@@ -2,6 +2,8 @@ package com.example.tastyhub.fixture.userReview;
 
 import static com.example.tastyhub.fixture.user.UserFixture.USER;
 
+import com.example.tastyhub.common.utils.OrderSpecifierUtil;
+import com.querydsl.core.types.OrderSpecifier;
 import java.util.Collections;
 import java.util.List;
 
@@ -9,6 +11,10 @@ import com.example.tastyhub.common.domain.userReview.dtos.PagingUserReviewRespon
 import com.example.tastyhub.common.domain.userReview.dtos.UserReviewCreateRequest;
 import com.example.tastyhub.common.domain.userReview.dtos.UserReviewUpdateRequest;
 import com.example.tastyhub.common.domain.userReview.entity.UserReview;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 
 public class UserReviewFixture {
     public static final UserReview USER_REVIEW =
@@ -35,6 +41,11 @@ public class UserReviewFixture {
         .nickname(USER.getNickname())
         .content("text")
         .build();
-    public static final List<PagingUserReviewResponse> PAGING_USER_REVIEW_RESPONSES = Collections.singletonList(
-        PAGING_USER_REVIEW_RESPONSE);
+
+    public static Pageable pageable = PageRequest.of(0, 1);
+
+    public static final Page<PagingUserReviewResponse> PAGING_USER_REVIEW_RESPONSES = new PageImpl(List.of(PAGING_USER_REVIEW_RESPONSE),pageable, 1);
+
+    public static OrderSpecifier<?>[] orderSpecifiers = OrderSpecifierUtil.getOrderSpecifiers(pageable, UserReview.class, "userReview");
+
 }
